# korean-verb-parser-cpp

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml
bindings/: bindings.cpp  example.py
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
examples/: prods.json  prods_1k.json
python/korean_verb_parser/: __init__.py
source/: main.cpp  nonterminal.cpp  nonterminal.hpp  pcfg.cpp  pcfg.hpp  production.cpp  production.hpp  tree.cpp  tree.h  viterbiparser.cpp  viterbiparser.h
test/: CMakeLists.txt
test/source/: parser_benchmark.cpp  parser_test.cpp
